istio/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-service-routing
spec:
  hosts:
    - "*"
  gateways:
    - app-gateway
  http:
    - match:
        - headers:
            user:
              exact: test-v2
      route:
        - destination:
            host: app-service
            subset: v2
    - route:
        - destination:
            host: app-service
            subset: v1
          weight: 90
        - destination:
            host: app-service
            subset: v2
          weight: 10
